--- a/CNPMNC1/Views/NguoiDung/Edit.cshtml
+++ b/CNPMNC1/Views/NguoiDung/Edit.cshtml
@@ -20,15 +20,19 @@
     <div class="form-group">
         @Html.LabelFor(model => model.Tinhtrang, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Tinhtrang, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Tinhtrang, "", new { @class = "text-danger" })
+            <select id="Tinhtrang" name="Tinhtrang" style="border: 0px; border-bottom: 0.5px solid #00000030; margin-left: 20px; width: 500px;">
+                <option value="Đang Duyệt">Đang Duyệt</option>
+                <option value="Đã Duyệt">Đã Duyệt</option>
+                <option value="Đang Giao">Đang Giao</option>
+                <option value="Đã Giao Thành Công">Đã Giao Thành Công</option>
+            </select>            @Html.ValidationMessageFor(model => model.Tinhtrang, "", new { @class = "text-danger" })
         </div>
     </div>
 
     <div class="form-group">
         @Html.LabelFor(model => model.ngaydathang, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.ngaydathang, new { htmlAttributes = new { @class = "form-control" } })
+        @Html.EditorFor(model => model.ngaydathang, new { @class = "control-label col-md-2" })
             @Html.ValidationMessageFor(model => model.ngaydathang, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -36,7 +40,7 @@
     <div class="form-group">
         @Html.LabelFor(model => model.tongtien, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.tongtien, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.EditorFor(model => model.tongtien, new { @class = "control-label col-md-2" })
             @Html.ValidationMessageFor(model => model.tongtien, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -44,7 +48,10 @@
     <div class="form-group">
         @Html.LabelFor(model => model.phuongthuctt, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.phuongthuctt, new { htmlAttributes = new { @class = "form-control" } })
+            <select id="phuongthuctt" name="phuongthuctt" style="border: 0px; border-bottom: 0.5px solid #00000030; margin-left: 20px; width: 500px;">
+                <option value="Thanh Toán Khi Nhận Hàng">Thanh Toán Khi Nhận Hàng</option>
+                <option value="Thanh Toán Bằng Ngân Hàng">Thanh Toán Bằng Ngân Hàng</option>
+            </select>
             @Html.ValidationMessageFor(model => model.phuongthuctt, "", new { @class = "text-danger" })
         </div>
     </div>
